Added and updated endpoints
